syntax = "proto3";

package auth;
option go_package = "github.com/rinat074/chat-go/proto/auth";

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse) {}
  rpc Login(LoginRequest) returns (AuthResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (TokenPair) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string user_agent = 3;
  string ip = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
  string user_agent = 2;
  string ip = 3;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  int64 user_id = 2;
  string username = 3;
}

message TokenPair {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message AuthResponse {
  TokenPair tokens = 1;
  User user = 2;
} 